--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3017,7 +3017,7 @@
  	 	 	"vars": [
  	 	 	 	"verb"
  	 	 	],
- 	 	 	"trans": "あなたはこれを${verb}することができません",
+ 	 	 	"trans": "このアイテムを${verb}することはできません",
  	 	 	"eng": "You are not able to ${verb} this"
  	 	},
  	 	"timeRequiredText": {
@@ -6290,7 +6290,7 @@
  	},
  	"error": {
  	 	"10_aborted": {
- 	 	 	"trans": "サーバー側のエラーに遭遇しました。このメッセージが表示された場合は、他のアクションを行う前に2分間待って、それが発生し続けないようにしてください。",
+ 	 	 	"trans": "サーバーエラーが発生しました. すみませんが, 少し待ってから操作してみてください.",
  	 	 	"eng": "Encountered an server side error, if you see this message, please wait for 2 minutes before making any other action to ensure it will not keep happening."
  	 	}
  	},
@@ -6318,14 +6318,14 @@
  	 	 	 	"enemy",
  	 	 	 	"player"
  	 	 	],
- 	 	 	"trans": "${enemy}は${player}によって敗北しました",
+ 	 	 	"trans": "${player}が${enemy}を倒した",
  	 	 	"eng": "${enemy} was defeated by ${player}"
  	 	},
  	 	"gearScoreTooHigh": {
  	 	 	"vars": [
  	 	 	 	"enemy"
  	 	 	],
- 	 	 	"trans": "あなたの平均機器レベルは高すぎて${enemy}から報酬を受け取ることができません",
+ 	 	 	"trans": "ギアスコアが高すぎるため, ${enemy}を倒した報酬を獲得できない",
  	 	 	"eng": "Your average equipment level is too high to receive reward from ${enemy}"
  	 	}
  	},
@@ -6350,7 +6350,7 @@
  	 	 	 	"amount",
  	 	 	 	"itemName"
  	 	 	],
- 	 	 	"trans": "${amount}個の${itemName}を獲得した",
+ 	 	 	"trans": "${amount}個の${itemName}を獲得",
  	 	 	"eng": "You received ${amount} ${itemName}"
  	 	}
  	},
@@ -6446,7 +6446,7 @@
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${expMultiplier}x more EXP!\r\n                    Challenge mode dungeon, extra loot and exp.\r\n                    Drops ${keyFragmentDisplayName}\r\n                    Not advised to enter if your level is too low"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "腕に自信はありますか？ チャレンジダンジョンに挑戦してみましょう. \r\n                         強力なボスを打ち倒し, 大量の戦利品を手にしましょう！ \r\n                         他のプレイヤーと一緒に挑戦することをお勧めします.",
+ 	 	 	 	"trans": "十分に強くなったら, チャレンジダンジョンに挑戦してみましょう. \r\n                         強力なボスを倒すことができれば, 大量の経験値と戦利品が手に入ります！ \r\n                         他のプレイヤーと一緒に挑戦することをお勧めします.",
  	 	 	 	"eng": "Are you strong enough? try it out on Challenge Dungeon,\r\n                        there is a strong boss and tons of loot at the end waiting for you!\r\n                        Its recommended to attempt this with other players."
  	 	 	}
  	 	},
@@ -6499,11 +6499,11 @@
  	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
- 	 	 	"trans": "強さに自信があるなら, ダンジョンでより強い敵と戦いましょう！ \r\n                         回復アイテムの準備を忘れないで！ ダンジョンでは戦闘の後にHPが回復しません.",
+ 	 	 	"trans": "戦いに慣れてきたら, ダンジョンでより強い敵と戦いましょう！ \r\n                         回復アイテムの準備を忘れないで！ ダンジョンでは戦闘の後にHPが回復しません.",
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	},
  	 	"cleared": {
- 	 	 	"trans": "ダンジョンがクリアされました！",
+ 	 	 	"trans": "ダンジョンをクリアした！",
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
@@ -6511,7 +6511,7 @@
  	 	"ui": {
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "路上での戦闘中にアイテムを使うことはできません, アイテムはダンジョン内での戦闘中のみ使用可能です",
+ 	 	 	 	 	"trans": "路上での戦闘中にアイテムを使うことはできません. アイテムはダンジョン内での戦闘中のみ使用可能です",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	},
@@ -6546,7 +6546,7 @@
  	 	 	 	 	"maxStackSize",
  	 	 	 	 	"newAmount"
  	 	 	 	],
- 	 	 	 	"trans": "アイテムの最大額を超える、${itemName}の最大スタックサイズは${maxStackSize}ですが、${newAmount}に収まりようとしています",
+ 	 	 	 	"trans": "アイテムの所持可能数を超過しています. ${itemName}の最大所持数は${maxStackSize}個ですが, これを獲得すると${newAmount}個になります",
  	 	 	 	"eng": "Exceed item max amount, ${itemName} has max stack size of ${maxStackSize}, but you are trying to fit in ${newAmount}"
  	 	 	},
  	 	 	"full": {
@@ -6554,7 +6554,7 @@
  	 	 	 	 	"neededAmount",
  	 	 	 	 	"size"
  	 	 	 	],
- 	 	 	 	"trans": "在庫のスペースが不十分で、${neededAmount}スロットが必要ですが、${size}しか持っていません",
+ 	 	 	 	"trans": "インベントリに空きがありません. 収納には${neededAmount}スロットが必要ですが, 現在${size}スロットです",
  	 	 	 	"eng": "Insufficient space in inventory, requires ${neededAmount} slots, but you only have ${size}"
  	 	 	}
  	 	}
@@ -6963,7 +6963,7 @@
  	 	 	},
  	 	 	"agreeToggle": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "理解しました. 私は決してスパムしたり, チャットのルールを破ったりしません",
+ 	 	 	 	 	"trans": "分かりました. 私は決してスパム行為をしたり, チャットのルールを破ったりしません",
  	 	 	 	 	"eng": "I understand and I will never spam or break any of the chat rules"
  	 	 	 	}
  	 	 	},
@@ -6973,7 +6973,7 @@
  	 	 	},
  	 	 	"confirmButton": {
  	 	 	 	"agreed": {
- 	 	 	 	 	"trans": "私はスパムしません",
+ 	 	 	 	 	"trans": "私はスパム行為をしません",
  	 	 	 	 	"eng": "I won't spam"
  	 	 	 	},
  	 	 	 	"notAgree": {
@@ -7245,7 +7245,7 @@
  	 	 	 	"eng": "Gang Name"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "ギャングのフルネームを入力してください",
+ 	 	 	 	"trans": "ギャングの正式名称を入力してください",
  	 	 	 	"eng": "Enter the full name of your gang"
  	 	 	}
  	 	},
@@ -7255,7 +7255,7 @@
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "チャットで表示される短いタグ",
+ 	 	 	 	"trans": "チャット欄で表示される短いタグ",
  	 	 	 	"eng": "A short tag that will be displayed in chat"
  	 	 	}
  	 	},
@@ -7468,14 +7468,14 @@
  	 	 	}
  	 	},
  	 	"notInGang": {
- 	 	 	"trans": "あなたはギャングにいません",
+ 	 	 	"trans": "あなたはギャングに所属していません",
  	 	 	"eng": "You are not in a gang"
  	 	},
  	 	"notTopGang": {
  	 	 	"vars": [
  	 	 	 	"topGangs"
  	 	 	],
- 	 	 	"trans": "あなたはトップギャングにいません。 トップギャングは：${topGangs}",
+ 	 	 	"trans": "あなたはトップギャングに所属していません. トップギャングは${topGangs}",
  	 	 	"eng": "You are not in a top gang. Top gangs are: ${topGangs}"
  	 	}
  	},
@@ -7700,11 +7700,11 @@
  	"player": {
  	 	"error": {
  	 	 	"deleteWhileMuted": {
- 	 	 	 	"trans": "ミュートされているときにアカウントを削除することはできません。",
+ 	 	 	 	"trans": "ミュート中はアカウントの削除はできません.",
  	 	 	 	"eng": "You can't delete your account when you are muted."
  	 	 	},
  	 	 	"deleteAccountTooEarly": {
- 	 	 	 	"trans": "今すぐこのアカウントを削除することはできません、数日待ってください",
+ 	 	 	 	"trans": "今すぐこのアカウントを削除することはできません. 数日待ってください",
  	 	 	 	"eng": "You can't delete this account now, please wait a few days"
  	 	 	},
  	 	 	"playerNotFound": {
@@ -7712,7 +7712,7 @@
  	 	 	 	"eng": "Player not found"
  	 	 	},
  	 	 	"notInBattle": {
- 	 	 	 	"trans": "あなたは戦いではありません。",
+ 	 	 	 	"trans": "今は戦闘中ではありません.",
  	 	 	 	"eng": "You are not in battle."
  	 	 	},
  	 	 	"cantPerformAction": {
@@ -7720,20 +7720,20 @@
  	 	 	 	"eng": "You can't perform this action now"
  	 	 	},
  	 	 	"invalidTravelLink": {
- 	 	 	 	"trans": "無効な旅行リンク、永続的な場合はリロードしてください",
+ 	 	 	 	"trans": "無効なリンク　状況が改善しない場合は再読み込みを試してください",
  	 	 	 	"eng": "Invalid Travel Link, if persist please reload"
  	 	 	}
  	 	},
  	 	"escape": {
  	 	 	"success": {
- 	 	 	 	"trans": "あなたは正常に逃げました！",
+ 	 	 	 	"trans": "逃走成功！",
  	 	 	 	"eng": "You have successfully escaped!"
  	 	 	},
  	 	 	"failed": {
  	 	 	 	"vars": [
  	 	 	 	 	"chance"
  	 	 	 	],
- 	 	 	 	"trans": "あなたは逃げられなかった、成功チャンス：${chance}％",
+ 	 	 	 	"trans": "逃走に失敗した. 成功率：${chance}％",
  	 	 	 	"eng": "You failed to escape, success chance: ${chance}%"
  	 	 	}
  	 	},
@@ -7741,43 +7741,43 @@
  	 	 	"vars": [
  	 	 	 	"enemy"
  	 	 	],
- 	 	 	"trans": "`あなたは${enemy}によって殺されました",
+ 	 	 	"trans": "`あなたは${enemy}に倒された",
  	 	 	"eng": "`You were killed by ${enemy}"
  	 	},
  	 	"levelTooHigh": {
- 	 	 	"trans": "ここでこのアクションを実行するにはレベルが高すぎます。次のゾーンで実行してみてください。",
+ 	 	 	"trans": "このエリアでその操作を行うにはプレイヤーレベルが高すぎます. 次のゾーンで実行してみてください.",
  	 	 	"eng": "Your level is too high to perform this action here, try to do it in the next zone."
  	 	},
  	 	"giveCred": {
  	 	 	"success": {
- 	 	 	 	"trans": "あなたは毎日の道路の信用を与えました。",
+ 	 	 	 	"trans": "本日分のリスペクトを送信しました.",
  	 	 	 	"eng": "You have given daily street cred."
  	 	 	},
  	 	 	"notEnoughLevelError": {
- 	 	 	 	"trans": "プレイヤーストリートクレジットを与えるには、レベル10以上でなければなりません",
+ 	 	 	 	"trans": "リスペクト機能はレベル10以上で開放されます.",
  	 	 	 	"eng": "You must be level 10 or above to give player street cred"
  	 	 	},
  	 	 	"cooldownError": {
- 	 	 	 	"trans": "あなたはまだストリートクレジットを与えることができません（毎日1回）",
+ 	 	 	 	"trans": "今日はもうリスペクトを送ることはできません（1日1回）",
  	 	 	 	"eng": "You cannot give street cred yet (once every day)"
  	 	 	}
  	 	}
  	},
  	"basicInfo": {
  	 	"nameUsed": {
- 	 	 	"trans": "この名前は他のプレイヤーによって使用されます、他の名前を使用してください",
+ 	 	 	"trans": "この名前は他のプレイヤーによって使用されています. 他の名前を使用してください",
  	 	 	"eng": "this name is used by other player, please use other name"
  	 	},
  	 	"nameIllegal": {
- 	 	 	"trans": "違法な名前、他の名前を使用してください",
+ 	 	 	"trans": "不正な名前です. 他の名前を使用してください",
  	 	 	"eng": "Illegal name, please use other name"
  	 	},
  	 	"nameProfane": {
- 	 	 	"trans": "この名前には許可されていない文言が含まれています、他の名前を使用してください",
+ 	 	 	"trans": "この名前には許可されていない文言が含まれています. 他の名前を使用してください",
  	 	 	"eng": "This name contains wordings not allowed, please use other name"
  	 	},
  	 	"nameInvalid": {
- 	 	 	"trans": "名前の長さは4よりも大きく、16以下のものよりも少なく、英語の文字、数字、または\\ '_ \\'のみが含まれている必要があります。",
+ 	 	 	"trans": "名前は5文字以上16文字以下で, 英字, 数字, \\ '_ \\'のみを使用したものにしてください.",
  	 	 	"eng": "name length must be greater then 4, less then or equal to 16 and only contains English characters, numbers or \\'_\\'"
  	 	}
  	},
@@ -7787,7 +7787,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "すでに他のプレイヤーによって展開されているのと同じステータス効果があるようです。 ${time}分で再び展開できます。",
+ 	 	 	 	"trans": "他のプレイヤーが発動したものと同じグローバルバフ効果のようです. あと${time}分で再び使用可能になります.",
  	 	 	 	"eng": "Seems like there is a same status effect deployed by other player already. you may deploy again in ${time} minute."
  	 	 	}
  	 	}
